--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- =====BOX ICONS===== -->
     <link
-      href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css"
+      href="assets/css/boxicons.min.css"
       rel="stylesheet"
     />
 
@@ -264,7 +264,7 @@
     </footer>
 
     <!--===== SCROLL REVEAL =====-->
-    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="/assets/js/scroll.js"></script>
 
     <!--===== MAIN JS =====-->
     <script src="/assets/js/main.js"></script>
